# LoreSmith

./: .gitignore  README.md  dev_config.json  docker-compose.yml  pyproject.toml
ainovel_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ainovel_py/agents/: __init__.py  build.py  context_manager.py  hints.py  longform.py  post_commit.py  review_flow.py  runner.py
ainovel_py/bootstrap/: config.py  configfile.py
ainovel_py/domain/: runtime.py  writing.py
ainovel_py/host/: host.py  resume.py
ainovel_py/internal_api/: app.py  artifacts.py  deps.py  dto.py  errors.py  mappers.py  persistence.py  registry.py  response_dto.py  tasks.py  (+7 more)
frontend-web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
java-platform/: README.md  pom.xml
skill/: README.md
tests/: internal_api_artifacts_filter_smoke.py  internal_api_artifacts_smoke.py  internal_api_auth_smoke.py  internal_api_cancel_smoke.py  internal_api_conflicts_smoke.py  internal_api_events_paging_smoke.py  internal_api_events_smoke.py  internal_api_health_smoke.py  internal_api_queue_pickup_smoke.py  internal_api_reload_pickup_smoke.py  internal_api_reload_smoke.py  internal_api_runs_filter_smoke.py  internal_api_runs_list_smoke.py  internal_api_runs_story_filter_smoke.py  internal_api_smoke.py  internal_api_workspace_intent_smoke.py  langgraph_backend_smoke.py  langgraph_e2e_smoke.py  langgraph_nodes_smoke.py  langgraph_resume_smoke.py  save_review_filter_smoke.py  test_host_co_create_reply.py  test_internal_api_workspace_intent.py
(+230 files in other folders)
