[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ainovel-py"
version = "0.1.0"
description = "LangGraph-based novel workflow kernel with Internal API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2.0",
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["ainovel_py*"]
